amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-extension-enum.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-extension-enum.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-declaration
  Message: Cannot exist two or more types with name 'MyEnum'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-extension-enum.graphql#/declares/scalar/MyEnum
  Property: 
  Range: [(10,0)-(12,1)]
  Location: 
